# smart_app_framework

./: .gitignore  README.md  manage.spec  pyproject.toml  setup.cfg  setup.py  smart_app_framework-1.0.8rc11-py3-none-any.whl  smart_app_framework-1.0.8rc23-py3-none-any.whl
.github/: docker-compose.yml  kafka_config.yml  logging_config.yml
.github/workflows/: build-publish.yml  docker-compose.yml  kafka-config.yml  kafka_config.yml  logging_config.yml  python-package.yml  python-publish-to-pip.yml  release.yml  semgrep.yml  tests.yml
core/basic_models/actions/: basic_actions.py  client_profile_actions.py  command.py  counter_actions.py  external_actions.py  push_action.py  show_versions_action.py  smartpay.py  smartrating.py  string_actions.py  variable_actions.py
core/basic_models/answer_items/: answer_items.py
core/basic_models/classifiers/: basic_classifiers.py  classifiers_constants.py
core/basic_models/counter/: counter.py
core/basic_models/parametrizers/: filter.py  parametrizer.py
core/basic_models/requirement/: basic_requirements.py  constants.py  counter_requirements.py  device_requirements.py  external_requirements.py  project_requirements.py  user_text_requirements.py
core/basic_models/scenarios/: base_scenario.py
core/basic_models/variables/: mid_variables.py  variables.py
core/configs/: __init__.py  base_config.py  config_constants.py  global_constants.py
core/db_adapter/: aioredis_adapter.py  aioredis_sentinel_adapter.py  db_adapter.py  ignite_adapter.py  ignite_thread_adapter.py  memory_adapter.py  redis_adapter.py
core/db_adapter/ceph/: ceph_adapter.py
core/descriptions/: descriptions.py  descriptions_items.py
core/logging/: logger_constants.py  logger_formatter.py  logger_utils.py
core/message/: device.py  from_message.py  message.py  message_constants.py  msg_validator.py
core/message/validators/: base_validator.py  header_validator.py  required_fields_validator.py
core/model/: base_user.py  factory.py  lazy_items.py  model.py  registered.py
core/model/queued_objects/: limited_queued_hashable_objects_description.py
core/monitoring/: healthcheck_handler.py  monitoring.py  twisted_server.py
core/mq/kafka/: async_kafka_publisher.py  consumer_rebalance_listener.py  kafka_consumer.py  kafka_publisher.py
core/names/: field.py
core/repositories/: base_repository.py  classifier_repository.py  dill_repository.py  file_repository.py  folder_filename_key_repository.py  folder_repository.py  secret_file_repository.py
core/request/: kafka_request.py  rest_request.py
core/text_preprocessing/: helpers.py  preprocessing_result.py
core/unified_template/: jinja_filters.py  num2ordinal.py  num2text.py  pan2service.py  unified_template.py
core/utils/: delay_runner.py  exception_handlers.py  loader.py  masking_message.py  memstats.py  period_determiner.py  pickle_copy.py  rerunable.py  singleton.py  stats_timer.py  utils.py  version.py
nlpf_statemachine/: __init__.py  config.py  const.py
nlpf_statemachine/example/: README.md  __init__.py  app_config.py  config.py  const.py  manage.py
nlpf_statemachine/example/app/: __init__.py  context_manager.py  model_config.py  scenario_utils.py  user.py
nlpf_statemachine/example/tests/: __init__.py
nlpf_statemachine/kit/: __init__.py  actions.py  classifier.py  context_manager.py  errors.py  form.py  scenario.py  screen.py  static_storage.py
nlpf_statemachine/kit/test_utils/: __init__.py  test_utils.py  utils.py
nlpf_statemachine/models/: __init__.py  context.py  debug_info.py  static_storage.py
nlpf_statemachine/models/enums/: __init__.py  character.py  device_features_app_types.py  emotion_id.py  event.py  file_format.py  integration_request_type.py  message_names.py  pronounce_text_types.py  smart_enum.py  surface.py  text_bubble_expand_policy.py
nlpf_statemachine/override/: __init__.py  dialogue_manager.py  model_config.py  repository.py  smartapp_model.py  user.py
nlpf_statemachine/utils/: __init__.py  base_utils.py
scenarios/actions/: action.py
scenarios/behaviors/: behavior_description.py  behaviors.py
scenarios/logging/: logger_constants.py
scenarios/requirements/: requirements.py
scenarios/scenario_descriptions/: form_filling_scenario.py
scenarios/user/: parametrizer.py  user_model.py
scenarios/utils/: make_json_serializable.py
smart_kit/action/: http.py  http_with_cookie.py  smart_geo_action.py
smart_kit/compatibility/: commands.py
smart_kit/configs/: __init__.py  logger_config.py  settings.py
smart_kit/handlers/: handle_close_app.py  handle_respond.py  handle_server_action.py  handle_take_runtime_permissions.py  handler_base.py  handler_run_app.py  handler_take_profile_data.py  handler_text.py  handler_timeout.py
smart_kit/management/: app_manager.py  base.py  cache.py  get_bundles_from_pps.py  smart_kit_manager.py  tests.py  version.py
smart_kit/message/: app_info.py  as_is_to_message.py  get_to_message.py  smartapp_to_message.py
smart_kit/models/: dialogue_manager.py  smartapp_model.py
smart_kit/names/: field.py  message_names.py
smart_kit/repositories/: payload_schema_repository.py
smart_kit/request/: kafka_request.py
smart_kit/resources/: __init__.py
smart_kit/start_points/: app.py  base_main_loop.py  constants.py  main_loop_async_http.py  main_loop_http.py  main_loop_kafka.py  main_loop_parallel_kafka.py
smart_kit/system_answers/: nothing_found_action.py
smart_kit/template/: app_config.py-tpl  manage.py-tpl  wsgi.py-tpl  wsgi_config.py-tpl
smart_kit/testing/: local.py  suite.py  utils.py
smart_kit/text_preprocessing/: http_text_normalizer.py  local_text_normalizer.py  nltk_tokenizer_binding.py  remote.py  text2num.py  utils.py
smart_kit/utils/: __init__.py  cache.py  diff.py  dynamic_import.py  object_location.py
tests/nlpf_statemachine_tests/: test_context_manager_exceptions.py  test_context_manager_integration.py  test_context_manager_integration_timeout.py  test_context_manager_intent_or_fallback_only_global.py  test_context_manager_screen_and_global.py  test_context_manager_simple_event.py  test_get_kwargs.py
(+231 files in other folders)
