[tool.poetry]
name = "smart-app-framework"
version = "0.0.0"
description = "Python-фреймворк, который позволяет создавать смартапы для виртуальных ассистентов Салют."
authors = ["Salute Developers <developer@sberdevices.ru>"]
readme = "README.md"
packages = [
    {include = "core"},
    {include = "scenarios"},
    {include = "smart_kit"},
]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]


[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
aiohttp = "3.7.4"
aioredis = "2.0.0"
boto = "2.49.0"
confluent_kafka = "1.9.2"
croniter = "1.3.7"
dill = "0.3.3"
ics = "0.6"
Jinja2 = "3.0.3"
keras = "2.8.0"
nltk = "3.5"
numpy = "1.21.0"
objgraph = "3.4.1"
prometheus-client = "0.7.1"
psutil = "5.8.0"
pyignite = "0.5.2"
pymorphy2 = "0.8"
pymorphy2_dicts = "2.4.393442.3710985"
python-dateutil = "2.7.3"
python-json-logger = "0.1.11"
PyYAML = "5.3"
redis = "4.1.4"
requests = "2.22.0"
rusenttokenize = "0.0.5"
scikit-learn = "1.1.2"
setuptools = "62.3.2"
tabulate = "0.9.0"
tatsu = "5.6.1"
grpcio = "1.49.1"
oauthlib = "3.2.0"
google-auth = "2.12.0"
tensorflow = [
    { version = "2.8.0", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'" },
    { version = "2.8.0", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
tensorflow-macos = {version = "2.8.0", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"}
tensorflow-aarch64 = {version = "2.8.0", markers = "sys_platform == 'linux' and platform_machine == 'aarch64'"}
timeout-decorator = "0.4.1"
tqdm = "4.64.1"
incremental = "21.3.0"
Twisted = "22.8.0"
freezegun = "1.1.0"
protobuf = "3.19.6"

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
taskipy = "1.10.3"
black = "^22.12.0"

[tool.taskipy.tasks]
lint = "flake8 . --max-line-length=120 --ignore W504,W605,F401 --exclude=smart_kit/utils/SmartAppToMessage_pb2.py"
unit_test = "python -m unittest discover -b -v -s tests"
runapp_http_test = """python -m smart_kit create_app http_test_app &&
                      cd http_test_app &&
                      PYTHONPATH=".." timeout 10 python manage.py run_app || code=$?;
                      if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi"""
runapp_kafka_test = """docker-compose -f .github/docker-compose.yml up -d &&
                       python -m smart_kit create_app kafka_test_app &&
                       cp .github/kafka_config.yml kafka_test_app/static/configs/kafka_config.yml &&
                       cp .github/logging_config.yml kafka_test_app/static/configs/logging_config.yml &&
                       cd kafka_test_app &&
                       echo 'from smart_kit.start_points.main_loop_kafka import MainLoop' >> app_config.py &&
                       echo 'MAIN_LOOP = MainLoop' >> app_config.py
                       docker-compose -f ../.github/docker-compose.yml exec -T kafka kafka-topics.sh --create --bootstrap-server localhost:9092 --partitions 3 --topic toTestApp &&
                       PYTHONPATH=".." timeout 10 python manage.py run_app || code=$?;
                       if [[ $code -ne 124 && $code -ne 0 ]]; then exit $code; fi"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
